# s3dvid

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  axes.c  camera.c  main.c  png.c  s3d.c
src/include/: camera.h  config.h.in  s3d.h  s3dpng.h
test/: testrun.in
